gitlab-setup/istio/gateways/default-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # Use the default Istio ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Route all HTTP traffic
    tls:
      httpsRedirect: false # Set to true to force HTTPS
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*" # Route all HTTPS traffic
    tls:
      mode: SIMPLE
      credentialName: wildcard-tls-cert # Reference to Kubernetes secret containing certificates
---
# Example virtual service that uses the gateway
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-routing
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 80
